--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 Hello
 
-<a href="https://ujwal-coditas.github.io/hello">Launch app</a>
+<a href="https://neeraj-coditas.github.io/hello">Launch app</a>
